[package]
name = "rust_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
csv = "1.3.0"
plotly = "0.8.4"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
statrs = "0.16.0"
tokio = { version = "1.36.0", features = ["full"] }
